@@ -5,9 +5,11 @@ SUBDIRS         = . pics icons
 bin_PROGRAMS    = knotes
 
 include_HEADERS = KNotesIface.h KNotesAppIface.h
-noinst_HEADERS  = knotesapp.h knote.h knoteedit.h knotebutton.h knoteconfigdlg.h \
-                  knoteslegacy.h resourcemanager.h resourcenotes.h resourcelocal.h \
-                  knotesnetrecv.h knotesnetsend.h knotehostdlg.h knotealarmdlg.h knotesalarm.h
+noinst_HEADERS  = knotesapp.h knote.h knoteedit.h knotebutton.h \
+                  knoteconfigdlg.h knoteslegacy.h resourcemanager.h \
+                  resourcenotes.h resourcelocal.h resourcelocalconfig.h \
+                  knotesnetrecv.h knotesnetsend.h knotehostdlg.h \
+                  knotealarmdlg.h knotesalarm.h
 
 noinst_LTLIBRARIES = libknote.la libknoteseditor.la libknoteslegacy.la libknotesconfig.la \
                      libknotesresources.la libknotesnetwork.la
@@ -16,7 +18,8 @@ libknoteslegacy_la_SOURCES = knoteslegacy.cpp
 libknotesconfig_la_SOURCES = knoteconfig.kcfgc knotesglobalconfig.kcfgc
 libknoteseditor_la_SOURCES = knoteedit.cpp
 libknotesnetwork_la_SOURCES = knotesnetrecv.cpp knotesnetsend.cpp
-libknotesresources_la_SOURCES = resourcemanager.cpp resourcenotes.cpp resourcelocal.cpp
+libknotesresources_la_SOURCES = resourcemanager.cpp resourcenotes.cpp \
+                                resourcelocal.cpp resourcelocalconfig.cpp
 libknote_la_SOURCES = knote.cpp knotebutton.cpp knoteconfigdlg.cpp knotehostdlg.cpp \
 							 knotealarmdlg.cpp knotesalarm.cpp
 
